<resources>
    <string name="facebook_app_id">2444487242488757</string>
    <string name="fb_login_protocol_scheme">fb2444487242488757</string>
    <string name="app_name">LawOfAttraction</string>
    <string name="facebook_interstitial_id">CAROUSEL_IMG_SQUARE_APP_INSTALL#2444487242488757_2444492419154906</string>
    <string name="facebook_banner_id">IMG_16_9_APP_INSTALL#2444487242488757_2445382835732531</string>
    <string name="langEng">English</string>
    <string name="langFre">français (French) </string>
    <string name="langcSpa">español (Spanish) </string>
    <string name="langJap">日本語 (Japanese) </string>
    <string name="langDut">Nederlands (Dutch) </string>
    <string name="langTha">ภาษาไทย (Thai) </string>
    <string name="langGer">Deutsch (German) </string>
    <string name="langPort">português (Portuguese) </string>
    <string name="langItalian">italiano (Italian) </string>
    <string name="langHin">हिन्दी (Hindi)</string>
    <string name="imageName">Image</string>
    <string name="taskTitle1">Day 1</string>
    <string name="taskInfo1">Info Day 1</string>
    <string name="taskTitle2">Day 2</string>
    <string name="taskInfo2">Info Day 2</string>
    <string name="taskTitle3">Day 3</string>
    <string name="taskInfo3">Info Day 3</string>
    <string name="title_activity_feedback">feedback</string>
    <string name="choose_language">Choose Your Language</string>
    <string name="langcontinue">CONTINUE</string>
    <string name="intro1">What are you Manifesting ?</string>
    <string name="intro2">Choose Your Language</string>
    <string name="intro3">CONTINUE</string>
    <string name="cha_Title">30 BE Happy Challenge !</string>
    <string name="value">Money</string>
    <string name="value1">Home</string>
    <string name="value2">Love</string>
    <string name="value3">Car</string>
    <string name="value4">Happiness</string>
    <string name="value5">Health</string>
    <string name="value6">Job</string>
    <string name="value7">Other Manifestation</string>
    <string name="loading_msg">Loading.....</string>
    <string name="noInternet_txt">Not connected to Internet</string>
    <string name="enterName">Please Enter Your Name</string>
    <string name="enterWish">Please Enter Your Wish</string>
    <string name="nameError">Name Cannot be more than 25 characters</string>
    <string name="nameError1">Name Cannot be  less than 3 characters</string>
    <string name="nameError2">Please enter appropriate name, or remove any obscene word from Name field</string>
    <string name="nameError3">No Digits or special symbols allowed in Name field</string>
    <string name="nameError4">Something went wrong.. Go back and try again</string>
    <string name="nwError">Network Unstable.. Scroll down to refresh</string>
    <string name="thankYou"> Thank You For Your Feedback !</string>
    <string name="Home_title">HOME</string>
    <string name="Home_subTitle">LAW OF ATTRACTION \n DAILY</string>
    <string name="Home_textBelowPager">Click Start to begin</string>
    <string name="Home_textBelowPager1">Hey </string>
    <string name="Home_textBelowPager2">, Let\'s Begin..</string>
    <string name="Home_startButtonText">START</string>
    <string name="Home_myStories">My Stories</string>
    <string name="Home_sayToUniverse">Say to Universe</string>
    <string name="Home_sayThankYou">Say Thank You !</string>
    <string name="Home_getProBannerText">CLICK HERE TO GET PRO VERSION </string>
    <string name="Home_Notification">, It\'s Time To Manifest Your Dreams !!"</string>
    <string name="Home_clickToStart">CLICK TO START</string>
    <string name="Home_pray">You Prayed For \t </string>
    <string name="subUniverse_buttonText">SUBMIT TO UNIVERSE</string>
    <string name="subUniverse_getPro">View My Private Wish</string>
    <string name="subUniverse_dialogTitle">Share Your Manifestation</string>
    <string name="subUniverse_dialogName">Name</string>
    <string name="subUniverse_dialogWish">Wish</string>
    <string name="subUniverse_dialogSubmit">SUBMIT</string>
    <string name="subUniverse_dialogCancel">Cancel</string>
    <string name="refresh_text">Scroll Down to refresh</string>
    <string name="myStory_buttonText">SHARE EXPERIENCE</string>
    <string name="myStory_dialogTitle">Share Your Manifestation Story</string>
    <string name="myStory_dialogName">Name</string>
    <string name="myStory_dialogStory">Your Story</string>
    <string name="myStory_dialogSubmit">SUBMIT</string>
    <string name="myStory_dialogCancel">Cancel</string>
    <string name="myStory_exp">Please Share Your Experience"</string>
    <string name="myStory_warn">Don\'t post any sensitive information"</string>
    <string name="nav_header_title">Law Of Attraction</string>
    <string name="nav_header_subtitle">Turn Your Dreams into Reality !!</string>
    <string name="navigation_drawer_info">What is Law Of Attraction</string>
    <string name="navigation_drawer_tips">5 Tips to Manifest Faster</string>
    <string name="navigation_drawer_music">Mind Relaxing Music</string>
    <string name="navigation_drawer_quote">Quote of the Day</string>
    <string name="navigation_drawer_story">Inspiring Stories</string>
    <string name="navigation_drawer_progress">Track Progress</string>
    <string name="navigation_drawer_life">Life is Exciting</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_drawer_language">Change Language</string>
    <string name="navigation_drawer_spread">Spread the word</string>
    <string name="navigation_drawer_mail">Drop a Mail</string>
    <string name="navigation_drawer_pro">Get Pro Version ( No Ads )</string>
    <string name="navigation_drawer_about">About the App</string>
    <string name="navigation_drawer_share">Share the App</string>
    <string name="navigation_drawer_rate">Rate us</string>
    <string name="navigation_drawer_feedback">Send Feedback</string>
    <string name="navigation_drawer_privacy">Privacy Policy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Get PRO Version ( No ADS )</string>
    <string name="start_text">START</string>
    <string name="skip_text">SKIP</string>
    <string name="next_text">NEXT</string>
    <string name="done_text">DONE</string>
    <string name="stopManifestation_text">Do you want to Stop your Manifestation Exercise?</string>
    <string name="Yes_text">YES</string>
    <string name="No_text">NO</string>
    <string name="Exit_Text">Do you want to Exit?</string>
    <string name="event_add">"Manifestation added to your Progress Tracker"</string>
    <string name="chooseToShare">"Choose Where to share"</string>
    <string name="activity1_text1_Money">RELAX YOUR MIND</string>
    <string name="activity1_text2_Money">Before proceeding make sure you relax your mind</string>
    <string name="activity1_text3_Money">It is good to focus on your mind before manifestation</string>
    <string name="activity1_text4_Money">Take a Deep Breath</string>
    <string name="activity1_text5_Money">Close your eyes slowly</string>
    <string name="activity1_text6_Money">After closing your eyes focus on your breathing until you feel calm and relaxed</string>
    <string name="activity2_text1_Money">THE MONEY</string>
    <string name="activity2_text2_Money">Decide Exactly How Much You Want</string>
    <string name="activity2_text3_Money">Do you need money for your debts, luxury or for financial freedom ?</string>
    <string name="activity2_text4_Money">Be clear about how much money you want and why do you want it</string>
    <string name="activity2_text5_Money">If you need to, come up with a specific number and write it down</string>
    <string name="activity2_text6_Money">Write down all the physical things that money would get you</string>
    <string name="activity3_text1_Money">VISUALIZE YOUR WEALTH</string>
    <string name="activity3_text2_Money">Creative visualization is a real cornerstone of the process of manifestation</string>
    <string name="activity3_text3_Money">Picture yourself enjoying the financial success</string>
    <string name="activity3_text4_Money">Visualize the money in your hand, in your account </string>
    <string name="activity3_text5_Money">Visualize yourself buying all the things that you have listed</string>
    <string name="activity3_text6_Money">It is good to visualise your goal before going to bed </string>
    <string name="activity4_text1_Money">SHOW GRATITUDE</string>
    <string name="activity4_text2_Money">Be Grateful For The Money You’ve Had</string>
    <string name="activity4_text3_Money">Remember the Universe is always there for you , No matter what</string>
    <string name="activity4_text4_Money">Being grateful has power to block out negative emotions and to send positive energy in the universe</string>
    <string name="activity4_text5_Money">Make gratitude a daily habit and you will end up having more..</string>
    <string name="activity5_text1_Money">TRUST THE UNIVERSE</string>
    <string name="activity5_text2_Money">All you need is trust and patience</string>
    <string name="activity5_text3_Money">Take actions towards your goal and be ready for any opportunity knocks your door </string>
    <string name="activity5_text4_Money">The pace of Nature is slow but it is worthy !</string>
    <string name="activity5_text5_Money">Don\'t get upset if these things don\'t happen immediately</string>
    <string name="activity5_text6_Money">Don\'t give up, practice all the steps everyday until you manifest your dream</string>
    <string name="activity1_text1_Home">RELAX YOUR MIND</string>
    <string name="activity1_text2_Home">Before proceeding make sure you relax your mind</string>
    <string name="activity1_text3_Home">It is good to focus on your mind before manifestation</string>
    <string name="activity1_text4_Home">Now take a Deep Breath</string>
    <string name="activity1_text5_Home">Close your eyes slowly</string>
    <string name="activity1_text6_Home">After closing your eyes focus on your breathing until you feel calm and relaxed</string>
    <string name="activity2_text1_Home">MY DREAM HOME</string>
    <string name="activity2_text2_Home">Decide how your Dream Home should be</string>
    <string name="activity2_text3_Home">Be the architect of your Dream Home</string>
    <string name="activity2_text4_Home">Be clear about how your dream home should be and where it should be located</string>
    <string name="activity2_text5_Home">Decide how many bedrooms, bathroom, dining room etc it should have</string>
    <string name="activity2_text6_Home">Write down all the things that you want to include in your Dream home</string>
    <string name="activity3_text1_Home">VISUALIZE YOUR DREAM HOME</string>
    <string name="activity3_text2_Home">Creative visualization is a real cornerstone of the process of manifestation</string>
    <string name="activity3_text3_Home">Visualise your Dream Home, it\'s structure, it\'s nearby surrounding, it\'s locality</string>
    <string name="audio_SubTitle">By simply speaking something you feel so passionately about into existence, you may be given opportunities that you’ve never thought possible\n
        Be sure that you do so with confidence and passion\n
        By saying these things out loud, not only are you making a mental note to do what you’ve said, but you are also informing the Universe of what you wish</string>
    <string name="audio_Title">Speak It Into Existence</string>
    <string name="audio_MainTitle">Speak It Into Existence, And You May Just Get What You Wished For</string>
    <string name="audio_SubTitle1">Speaking something into existence is an easy task to fit into your daily routine</string>
</resources>