<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#232635"
    tools:context=".AudioWishHome">

    <ScrollView

        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:padding="10dp"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                android:text="@string/audio_Title"
                android:textColor="#ffffff"
                android:fontFamily="@font/abeezee"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/audioImageView"
                android:layout_width="200dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:layout_height="200dp"
                />

            <TextView
                android:id="@+id/audioTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/audio_MainTitle"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="18sp"
                android:textStyle="bold"
                android:visibility="visible"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/audioTextSubtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/abeezee"
                android:text="@string/audio_SubTitle"
                android:textAlignment="center"
                android:textColor="#eaeded"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/audioConclusion"
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/abeezee"
                android:text="@string/audio_SubTitle1"
                android:textAlignment="center"
                android:textColor="#eaeded"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

            <TextView
                android:id="@+id/audioStartText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/Home_textBelowPager"
                android:textColor="#DFDFDE"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/audioStartButton"
                android:layout_marginTop="30dp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/buton1"
                android:fontFamily="@font/nunito_extrabold"
                android:text="@string/start_text"
                android:textSize="20sp"
                android:textColor="#ffffff" />



            <TextView
                android:id="@+id/viewMyAudio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/abeezee"
                android:text="View My Wishes"
                android:textAlignment="center"
                android:textColor="#eaeded"
                android:textSize="20sp"
                android:textStyle="bold"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>